# hsl-data-platform

./: .gitignore  README.md  azure-pipelines.yml
applications/vehicle-pos-data-forwarder/: Cargo.toml  Dockerfile  README.md
applications/vehicle-pos-data-forwarder-go/: go.mod  go.sum  main.go
applications/vehicle-pos-data-forwarder-python/: requirements.txt
applications/vehicle-pos-data-forwarder-python/forwarder/: hsl_mqtt.py  kafka_producers.py  main.py
applications/vehicle-pos-data-forwarder/src/: lib.rs  main.rs
applications/vehicle-pos-data-forwarder/utils/kafka-docker-local/: docker-compose.yml
applications/vehicle-pos-kafka-streams/: build.gradle  settings.gradle  stats.json
applications/vehicle-pos-kafka-streams/src/main/java/hsl/: HslDataMappings.java  VehicleSpeedAnalyses.java  VehicleSpeedAnalysisStream.java
applications/vehicle-pos-kafka-streams/src/main/resources/: log4j.properties
confluent_ce/: README.md  docker-compose.yml
infrastructure/azure/: main.tf  outputs.tf  variables.tf  versions.tf
kafka/: README.md  create_kafka.sh  docker-compose.yml
notebooks/scala/: hsl-dev-notebook.scala
