[package]
name = "vehicle-pos-data-forwarder"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mosquitto-client = "0.1.5"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
kafka = "0.8"
