[package]
name = "vehicle-pos-data-forwarder"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
mqtt311 = "0.2.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
rdkafka-sys = { version = "=1.2.2", default-features = false }
rdkafka = { version = "0.22.0", features = ["ssl", "sasl"] }
futures = "0.1.21"
regex = "1.5.5"
